fixed a max-width issue for blog thumbnails on mobile

--- a/themes/Moov2/Styles/components/_box.scss
+++ b/themes/Moov2/Styles/components/_box.scss
@@ -30,7 +30,13 @@
 .box--padded { @include rem(padding, $spacing-default); }
 
 .box--thumbnail {
-    @include rem(max-width, 300px);
-
     height: auto;
+    max-width: 100%;
+    width: 100%;
+
+    @include bp-min-width($bp-medium) {
+    	@include rem(max-width, 300px);
+
+    	width: auto;
+    }
 }
